k8s/overlays/staging/api.yml
#
# Backend deployment
#
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  labels:
    io.kompose.service: api

spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: api

  template:
    spec:
      containers:
        - name: api
          securityContext:
            capabilities:
              drop:
              - NET_RAW
            
          volumeMounts:
            - name: secrets-store-inline
              mountPath: "/mnt/secrets-store"
              readOnly: true

      volumes:
        - name: secrets-store-inline
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: "azure-key-vault"
